test: add recipe service test